2007-09-14 Denis Ovsienko

	* rt_socket.c: (kernel_rtm_ipv4) Use lookup() instead of
	  LOOKUP/mes_lookup() for rtm_type_str, as this is more
	  appropriate for sparse code-spaces (#401).
	* kernel_socket.c: (rtm_read, rtmsg_debug): Idem.
	* kernel_socket.[ch]: We don't need rtm_type_str_max any more.

2007-09-12 Denis Ovsienko

	* rt_socket.c: (kernel_rtm_ipv4) prefix_buf could be passed
	  to zlog_err() uninitialized with debug disabled. Fixed.

2007-09-06 Denis Ovsienko

	* rtread_sysctl.c: (route_read) Set RTF_DONE on the routing
	  messages when fetching initial kernel FIB, so rtm_read()
	  doesn't skip them.

2007-08-21 Denis Ovsienko

	* ioctl_solaris.c: (if_get_mtu) Don't break things if either
	  IPv6 was disabled at compile time or the current interface
	  hasn't it enabled.
	* kernel_socket.c: (ifm_read) Don't forget to call if_get_mtu()
	  for updated interfaces.

2007-08-17 Denis Ovsienko

	* kernel_socket.c: (rtm_read) Ignore any routing socket messages
	  without RTF_DONE flag set, as they are just noise for us.

2007-08-14 Denis Ovsienko

	* zebra_rib.c: (nexthop_active_update) Added a comment
          and rewrote nexthop iteration.

2007-08-13 Denis Ovsienko

	* kernel_socket.c: normalize rtm_type_str so it can be handled
	  by LOOKUP macro
	* kernel_socket.c: (rtm_read) don't ignore self-generated
	  routing messages, so we can debug them; make use of
	  ZEBRA_ERR_RTNOEXIST; output more details in debug log.
	* kernel_socket.c: (rtmsg_debug) make use of LOOKUP macro
	* kernel_socket.h: let the world know about rtm_type_str[_max]
	* rib.h: 3 more debugging functions and 5 return codes
	* rt_socket.c: (kernel_rtm_ipv4) dump IP prefix and masklen;
	  complain about strange rtm_write() return values
	* zebra_rib.c: (rib_lookup_ipv4_route, rib_dump,
	  rib_lookup_and_dump) --- new functions; more comments;
	  more debug logging

2007-08-10  Emmanuel Vize <emmanuel.vize@6wind.com>
